--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                   ><span class="rank">#1</span><br />cold coffee with ice
                   cream</span
                 ><span class="item-price"
-                  >Prices = Small:₹45, Medium:₹55, Large:65</span
+                  >Prices = Small:₹45, Medium:₹55, Large:₹65</span
                 ><span class="item-rating">5.0(3407 people)</span
                 ><button class="item-add" id="addS">
                   Add Small &nbsp;&nbsp;&nbsp;+</button
@@ -200,7 +200,7 @@
                   class="item-img"
                 /><span class="item-name">cold coffee with ice cream</span
                 ><span class="item-price"
-                  >Prices = Small:₹45, Medium:₹55, Large:65</span
+                  >Prices = Small:₹45, Medium:₹55, Large:₹65</span
                 ><span class="item-rating">5.0(3407 people)</span
                 ><button class="item-add" id="addS">
                   Add Small &nbsp;&nbsp;&nbsp;+</button
