--- a/order_confirmed_.page.html
+++ b/order_confirmed_.page.html
@@ -39,8 +39,8 @@
             <h3 class="sec-headings">Order details</h3>
             <p><strong>Time left for delivery:</strong> 30 minutes</p>
             <p>
-              <strong>Ordered items:</strong> 1x Latte, 2x Cappuccino, 1x
-              Cold Coffee With Ice Cream
+              <strong>Ordered items:</strong> 1x Large Latte, 2x Medium Cappuccino, 1x
+              Large Cold Coffee With Ice Cream
             </p>
             <!-- Add more order details as suitable -->
           </div>
@@ -72,11 +72,11 @@
                 <tbody>
                   <tr>
                     <td>Item Total:</td>
-                    <td>₹600</td>
+                    <td>₹400</td>
                   </tr>
                   <tr>
                     <td>GST (5%):</td>
-                    <td>+₹30</td>
+                    <td>+₹20</td>
                   </tr>
                   <tr>
                     <td>Handling Charges:</td>
@@ -84,7 +84,7 @@
                   </tr>
                   <tr>
                     <td>Order Total:</td>
-                    <td>₹642</td>
+                    <td>₹432</td>
                   </tr>
                 </tbody>
               </table>
