--- a/about_page.html
+++ b/about_page.html
@@ -156,7 +156,7 @@
             </p>
             <p>
               Dev Gurnani<br />Role: Cafe Manager , Email:
-              dgurnani6969@gmail.com , Gender: Male.
+              dgurnani420@gmail.com , Gender: Male.
             </p>
             <p>
               Kajal Verma <br />Role: Cafe Owner (Co-Founder) , Email:
@@ -168,7 +168,7 @@
             </p>
             <p>
               Aryan <br />Role: Cheif Marketing Officer , Email:
-              Aryan9669@gmail.com , Gender: Male.
+              Aryan99@gmail.com , Gender: Male.
             </p>
             <p>
               Nawaz Hussain<br />Role: Customer care 1 , Email:
@@ -179,20 +179,20 @@
               Ph: 9582113439 , Gender: Male.
             </p>
             <p>
-              Riyaz ali <br />Role: Barista 1 + Chapri , Email:
-              rAli009@gmail.com , Gender: Female.
+              Aryan gupta <br />Role: Barista 1, Email:
+              aRgupta009@gmail.com , Gender: Male.
             </p>
             <p>
-              Puneet superstaar<br />Role: Barista 2 + cringe , Email:
-              puneetSuper11@gmail.com , Gender: Male.
+              Khushi Sharma<br />Role: Barista 2, Email:
+              KhushiSH024@gmail.com , Gender: Female.
             </p>
             <p>
-              Deepak kalal<br />Role: cringe + chapri , Email:
-              deepak09@gmail.com , Gender: Transgender.
+              Aman swami<br />Role: Barista 3 , Email:
+              amanSwami3015@gmail.com , Gender: Male.
             </p>
             <p>
-              Iyer <br />Role: Barista 3 + Jethalal se jhagadna , Email:
-              iyeer420@gmail.com , Gender: Male.
+              Abhishek sharma<br />Role: Barista 4, Email:
+              Abhisharma06@gmail.com , Gender: Male.
             </p>
           </div>
         </section>
